blog links on homepage and playing around with the front page settings

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -70,44 +70,47 @@
                     {% endblock %}
 
                     {% block intro %}
-                        <!-- Intro -->
-                        <section id="intro" class="container">
-                            <div class="row">
-                                <div class="col-4 col-12-medium">
-                                    <section class="first">
-                                        <i class="icon solid featured fa-cog"></i>
-                                        <header>
-                                            <h2>Ipsum consequat</h2>
-                                        </header>
-                                        <p>Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p>
-                                    </section>
+                        {% if getSetting('pages') %}
+                            {# Once I get more pages built and/or a page builder, this will be used. #}
+                            <!-- Intro -->
+                            <section id="intro" class="container">
+                                <div class="row">
+                                    <div class="col-4 col-12-medium">
+                                        <section class="first">
+                                            <i class="icon solid featured fa-cog"></i>
+                                            <header>
+                                                <h2>Ipsum consequat</h2>
+                                            </header>
+                                            <p>Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p>
+                                        </section>
+                                    </div>
+                                    <div class="col-4 col-12-medium">
+                                        <section class="middle">
+                                            <i class="icon solid featured alt fa-bolt"></i>
+                                            <header>
+                                                <h2>Magna etiam dolor</h2>
+                                            </header>
+                                            <p>Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p>
+                                        </section>
+                                    </div>
+                                    <div class="col-4 col-12-medium">
+                                        <section class="last">
+                                            <i class="icon solid featured alt2 fa-star"></i>
+                                            <header>
+                                                <h2>Tempus adipiscing</h2>
+                                            </header>
+                                            <p>Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p>
+                                        </section>
+                                    </div>
                                 </div>
-                                <div class="col-4 col-12-medium">
-                                    <section class="middle">
-                                        <i class="icon solid featured alt fa-bolt"></i>
-                                        <header>
-                                            <h2>Magna etiam dolor</h2>
-                                        </header>
-                                        <p>Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p>
-                                    </section>
-                                </div>
-                                <div class="col-4 col-12-medium">
-                                    <section class="last">
-                                        <i class="icon solid featured alt2 fa-star"></i>
-                                        <header>
-                                            <h2>Tempus adipiscing</h2>
-                                        </header>
-                                        <p>Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p>
-                                    </section>
-                                </div>
-                            </div>
-                            <footer>
-                                <ul class="actions">
-                                    <li><a href="#" class="button large">Get Started</a></li>
-                                    <li><a href="#" class="button alt large">Learn More</a></li>
-                                </ul>
-                            </footer>
-                        </section>
+                                <footer>
+                                    <ul class="actions">
+                                        <li><a href="#" class="button large">Get Started</a></li>
+                                        <li><a href="#" class="button alt large">Learn More</a></li>
+                                    </ul>
+                                </footer>
+                            </section>
+                        {% endif %}
                     {% endblock %}
 
                 </section>
@@ -124,139 +127,25 @@
                                     <!-- Portfolio -->
                                     <section>
                                         <header class="major">
-                                            <h2>My Portfolio</h2>
+                                            <h2>Recent Blog Articles</h2>
                                         </header>
                                         <div class="row">
-                                            <div class="col-4 col-6-medium col-12-small">
-                                                <section class="box">
-                                                    <a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-                                                    <header>
-                                                        <h3>Ipsum feugiat et dolor</h3>
-                                                    </header>
-                                                    <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-                                                    <footer>
-                                                        <ul class="actions">
-                                                            <li><a href="#" class="button alt">Find out more</a></li>
-                                                        </ul>
-                                                    </footer>
-                                                </section>
-                                            </div>
-                                            <div class="col-4 col-6-medium col-12-small">
-                                                <section class="box">
-                                                    <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-                                                    <header>
-                                                        <h3>Sed etiam lorem nulla</h3>
-                                                    </header>
-                                                    <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-                                                    <footer>
-                                                        <ul class="actions">
-                                                            <li><a href="#" class="button alt">Find out more</a></li>
-                                                        </ul>
-                                                    </footer>
-                                                </section>
-                                            </div>
-                                            <div class="col-4 col-6-medium col-12-small">
-                                                <section class="box">
-                                                    <a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-                                                    <header>
-                                                        <h3>Consequat et tempus</h3>
-                                                    </header>
-                                                    <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-                                                    <footer>
-                                                        <ul class="actions">
-                                                            <li><a href="#" class="button alt">Find out more</a></li>
-                                                        </ul>
-                                                    </footer>
-                                                </section>
-                                            </div>
-                                            <div class="col-4 col-6-medium col-12-small">
-                                                <section class="box">
-                                                    <a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-                                                    <header>
-                                                        <h3>Blandit sed adipiscing</h3>
-                                                    </header>
-                                                    <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-                                                    <footer>
-                                                        <ul class="actions">
-                                                            <li><a href="#" class="button alt">Find out more</a></li>
-                                                        </ul>
-                                                    </footer>
-                                                </section>
-                                            </div>
-                                            <div class="col-4 col-6-medium col-12-small">
-                                                <section class="box">
-                                                    <a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-                                                    <header>
-                                                        <h3>Etiam nisl consequat</h3>
-                                                    </header>
-                                                    <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-                                                    <footer>
-                                                        <ul class="actions">
-                                                            <li><a href="#" class="button alt">Find out more</a></li>
-                                                        </ul>
-                                                    </footer>
-                                                </section>
-                                            </div>
-                                            <div class="col-4 col-6-medium col-12-small">
-                                                <section class="box">
-                                                    <a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
-                                                    <header>
-                                                        <h3>Dolore nisl feugiat</h3>
-                                                    </header>
-                                                    <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-                                                    <footer>
-                                                        <ul class="actions">
-                                                            <li><a href="#" class="button alt">Find out more</a></li>
-                                                        </ul>
-                                                    </footer>
-                                                </section>
-                                            </div>
-                                        </div>
-                                    </section>
-                                {% endblock %}
-
-                            </div>
-                            <div class="col-12">
-
-                                {% block blog %}
-                                    <!-- Blog -->
-                                    <section>
-                                        <header class="major">
-                                            <h2>The Blog</h2>
-                                        </header>
-                                        <div class="row">
-                                            <div class="col-6 col-12-small">
-                                                <section class="box">
-                                                    <a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
-                                                    <header>
-                                                        <h3>Magna tempus consequat</h3>
-                                                        <p>Posted 45 minutes ago</p>
-                                                    </header>
-                                                    <p>Lorem ipsum dolor sit amet sit veroeros sed et blandit consequat sed veroeros lorem et blandit adipiscing feugiat phasellus tempus hendrerit, tortor vitae mattis tempor, sapien sem feugiat sapien, id suscipit magna felis nec elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos lorem ipsum dolor sit amet.</p>
-                                                    <footer>
-                                                        <ul class="actions">
-                                                            <li><a href="#" class="button icon solid fa-file-alt">Continue Reading</a></li>
-                                                            <li><a href="#" class="button alt icon solid fa-comment">33 comments</a></li>
-                                                        </ul>
-                                                    </footer>
-                                                </section>
-                                            </div>
-                                            <div class="col-6 col-12-small">
-                                                <section class="box">
-                                                    <a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
-                                                    <header>
-                                                        <h3>Aptent veroeros aliquam</h3>
-                                                        <p>Posted 45 minutes ago</p>
-                                                    </header>
-                                                    <p>Lorem ipsum dolor sit amet sit veroeros sed et blandit consequat sed veroeros lorem et blandit adipiscing feugiat phasellus tempus hendrerit, tortor vitae mattis tempor, sapien sem feugiat sapien, id suscipit magna felis nec elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos lorem ipsum dolor sit amet.</p>
-                                                    <footer>
-                                                        <ul class="actions">
-                                                            <li><a href="#" class="button icon solid fa-file-alt">Continue Reading</a></li>
-                                                            <li><a href="#" class="button alt icon solid fa-comment">33 comments</a></li>
-                                                        </ul>
-                                                    </footer>
-                                                </section>
-                                            </div>
+                                            {% for b in recentBlogs %}
+                                                <div class="col-4 col-6-medium col-12-small">
+                                                    <section class="box">
+                                                        <a href="{{ path('selene_cms_blog_post', {slug: b.getSlug}) }}" class="image featured"><img src="{{ b.getImageFile.getImageFile }}" alt="{{ b.getTitle }}" /></a>
+                                                        <header>
+                                                            <h3>{{ b.getTitle }}</h3>
+                                                        </header>
+                                                        <p>{{ b.getPreview|striptags }}</p>
+                                                        <footer>
+                                                            <ul class="actions">
+                                                                <li><a href="{{ path('selene_cms_blog_post', {slug: b.getSlug}) }}" class="button alt">{% apply readMoreButton_content %}Read More{% endapply %}</a></li>
+                                                            </ul>
+                                                        </footer>
+                                                    </section>
+                                                </div>
+                                            {% endfor %}
                                         </div>
                                     </section>
                                 {% endblock %}
@@ -272,6 +161,8 @@
                 <section id="footer">
                     <div class="container">
                         <div class="row">
+                            {% if getSetting('events') %}
+                                {# Events might be in 0.13 of the bundle #}
                             <div class="col-8 col-12-medium">
                                 <section>
                                     <header>
@@ -306,6 +197,7 @@
                                     </ul>
                                 </section>
                             </div>
+                            {% endif %}
                             <div class="col-4 col-12-medium">
                                 <section>
                                     <header>
