added some content blocks

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -201,17 +201,19 @@
                             <div class="col-4 col-12-medium">
                                 <section>
                                     <header>
-                                        <h2>What's this all about?</h2>
+                                        <h2>{% apply aboutUsTitleFooter_content %}What's this all about?{% endapply %}</h2>
                                     </header>
                                     <a href="#" class="image featured"><img src="images/pic10.jpg" alt="" /></a>
                                     <p>
+                                    {% apply aboutUsFooter_content %}
                                     This is <strong>Dopetrope</strong> a free, fully responsive HTML5 site template by
                                     <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net/">HTML5 UP</a> It's released for free under
                                     the <a href="http://html5up.net/license/">Creative Commons Attribution</a> license so feel free to use it for any personal or commercial project &ndash; just don't forget to credit us!
+                                    {% endapply %}
                                     </p>
                                     <footer>
                                         <ul class="actions">
-                                            <li><a href="#" class="button">Find out more</a></li>
+                                            <li><a href="#" class="button">{% apply ctaButton_content %}Find out more{% endapply %}</a></li>
                                         </ul>
                                     </footer>
                                 </section>
@@ -219,7 +221,7 @@
                             <div class="col-4 col-6-medium col-12-small">
                                 <section>
                                     <header>
-                                        <h2>Tempus consequat</h2>
+                                        <h2>Tempus consequat JASON</h2>
                                     </header>
                                     <ul class="divided">
                                         <li><a href="#">Lorem ipsum dolor sit amet sit veroeros</a></li>
@@ -249,32 +251,38 @@
                             <div class="col-4 col-12-medium">
                                 <section>
                                     <header>
-                                        <h2>Vitae tempor lorem</h2>
+                                        <h2>{% apply socilaMediaCTA_content %}Social Media{% endapply %}</h2>
                                     </header>
                                     <ul class="social">
                                         <li><a class="icon brands fa-facebook-f" href="#"><span class="label">Facebook</span></a></li>
-                                        <li><a class="icon brands fa-twitter" href="#"><span class="label">Twitter</span></a></li>
+                                        <li><a class="icon brands fa-twitter" href="#"><span class="label">X / Twitter</span></a></li>
                                         <li><a class="icon brands fa-dribbble" href="#"><span class="label">Dribbble</span></a></li>
                                         <li><a class="icon brands fa-tumblr" href="#"><span class="label">Tumblr</span></a></li>
                                         <li><a class="icon brands fa-linkedin-in" href="#"><span class="label">LinkedIn</span></a></li>
                                     </ul>
                                     <ul class="contact">
+                                        {% if  getSetting('address') %}
                                         <li>
-                                            <h3>Address</h3>
+                                            <h3>{% apply mailingAddressCTA_content %}Address{% endapply %}</h3>
                                             <p>
+                                            {% apply mailingAddress_content %}
                                             Untitled Incorporated<br />
                                             1234 Somewhere Road Suite<br />
                                             Nashville, TN 00000-0000
+                                            {% endapply %}
                                             </p>
                                         </li>
+                                        {% endif %}
                                         <li>
-                                            <h3>Mail</h3>
-                                            <p><a href="#">someone@untitled.tld</a></p>
+                                            <h3>{% apply eMailCTA_content %}Email{% endapply %}</h3>
+                                            <p><a href="{% apply contactEmail_content %}mail@example.com{% endapply %}">{% apply contactEmail_content %}mail@example.com{% endapply %}</a></p>
                                         </li>
+                                        {% if getSetting('contactPhone') %}
                                         <li>
                                             <h3>Phone</h3>
-                                            <p>(800) 000-0000</p>
+                                            <p>{% apply phoneNumber_content %}(000) 000-0000{% endapply %}</p>
                                         </li>
+                                        {% endif %}
                                     </ul>
                                 </section>
                             </div>
