--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -22,11 +22,13 @@
                             <h2>{% apply loginTitle_content %}Login{% endapply %}</h2>
                         </header>
 
-                        {% if error %}
-                            <p class="py-6 text-pink-600">
-                            {{ error.messageKey|trans(error.messageData, 'security') }}
-                            </p>
-                        {% endif %}
+                        {% block errorMSG %}
+                            {% if error %}
+                                <p class="py-6 text-pink-600">
+                                {{ error.messageKey|trans(error.messageData, 'security') }}
+                                </p>
+                            {% endif %}
+                        {% endblock %}
 
                         {% if app.user %}
                             <p class="py6">
@@ -34,39 +36,41 @@
                             </p>
                         {% endif %}
 
-                        <footer>
-                            <form method="POST">
-                                <ul class="actions">
+                        {% block formGoods %}
+                            <footer>
+                                <form method="POST">
+                                    <ul class="actions">
 
-                                    <li>
-                                        <input type="email"
-                                               value="{{ last_username }}"
-                                               name="email"
-                                               id="inputEmail"
-                                               class=""
-                                               autocomplete="email"
-                                               required
-                                               placeholder="Email Address"
-                                               autofocus />
-                                    </li>
-                                    <li>
-                                        <input type="password"
-                                               name="password"
-                                               id="inputPassword"
-                                               class=""
-                                               autocomplete="current-password"
-                                               placeholder="******************"
-                                               required />
-                                        <input type="hidden"
-                                               name="_csrf_token"
-                                               value="{{ csrf_token('authenticate') }}" />
-                                    </li>
-                                    <li>
-                                        <button type="submit" class="button large">Submit</button>
-                                    </li>
-                                </ul>
-                            </form>
-                        </footer>
+                                        <li>
+                                            <input type="email"
+                                                   value="{{ last_username }}"
+                                                   name="email"
+                                                   id="inputEmail"
+                                                   class=""
+                                                   autocomplete="email"
+                                                   required
+                                                   placeholder="Email Address"
+                                                   autofocus />
+                                        </li>
+                                        <li>
+                                            <input type="password"
+                                                   name="password"
+                                                   id="inputPassword"
+                                                   class=""
+                                                   autocomplete="current-password"
+                                                   placeholder="******************"
+                                                   required />
+                                            <input type="hidden"
+                                                   name="_csrf_token"
+                                                   value="{{ csrf_token('authenticate') }}" />
+                                        </li>
+                                        <li>
+                                            <button type="submit" class="button large">Submit</button>
+                                        </li>
+                                    </ul>
+                                </form>
+                            </footer>
+                        {% endblock %}
 
                     </section>
 
@@ -75,93 +79,5 @@
         </div>
     </section>
 {% endblock %}
-
-
-{% block main2 %}
-    <div class="container w-full max-w-6xl mx-auto bg-white bg-cover mt-8 rounded" style="background-image:url('{% apply dankalley_image %}https://source.unsplash.com/collection/1118905/{% endapply %}'); height: 40vh;"></div>
-
-    <div class="container max-w-5xl mx-auto -mt-32">
-
-        <div class="mx-0 sm:mx-6">
-
-            <div class="bg-white w-full p-8 md:p-24 text-xl md:text-2xl text-gray-800 leading-normal" style="font-family:Georgia,serif;">
-
-                <p class="text-2xl md:text-3xl mb-5">{% apply loginFormTitle_content %}Login In!{% endapply %}</p>
-                {% if error %}
-                    <p class="py-6 text-pink-600">
-                    {{ error.messageKey|trans(error.messageData, 'security') }}
-                    </p>
-                {% endif %}
-
-                {% if app.user %}
-                    <p class="py6">
-                    You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
-                    </p>
-                {% endif %}
-
-
-                <form class="w-full max-w-sm" method="POST">
-                    <div class="md:flex md:items-center mb-6">
-                        <div class="md:w-1/3">
-                            <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
-                                Email Address
-                            </label>
-                        </div>
-                        <div class="md:w-2/3">
-
-                            <input type="email"
-                                   value="{{ last_username }}"
-                                   name="email"
-                                   id="inputEmail"
-                                   class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"
-                                   autocomplete="email"
-                                   required
-                                   placeholder="Email Address"
-                                   autofocus />
-
-
-                        </div>
-                    </div>
-                    <div class="md:flex md:items-center mb-6">
-                        <div class="md:w-1/3">
-                            <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-password">
-                                Password
-                            </label>
-                        </div>
-                        <div class="md:w-2/3">
-                            <input type="password"
-                                   name="password"
-                                   id="inputPassword"
-                                   class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"
-                                   autocomplete="current-password"
-                                   placeholder="******************"
-                                   required />
-                            <input type="hidden"
-                                   name="_csrf_token"
-                                   value="{{ csrf_token('authenticate') }}" />
-                        </div>
-                    </div>
-                    <div class="md:flex md:items-center mb-6">
-                        <div class="md:w-1/3"></div>
-                        <label class="md:w-2/3 block text-gray-500 font-bold">
-                            <input class="mr-2 leading-tight" type="checkbox" name="_remember_me">
-                            <span class="text-sm">
-                                Remember Me
-                            </span>
-                        </label>
-                    </div>
-                    <div class="md:flex md:items-center">
-                        <div class="md:w-1/3"></div>
-                        <div class="md:w-2/3">
-                            <input type="submit" class="shadow bg-purple-500 hover:bg-purple-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button" value="Login" />
-                        </div>
-                    </div>
-                </form>
-
-            </div>
-        </div>
-    </div>
-{% endblock %}
-
 
 
