--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -1,22 +1,35 @@
-{% extends 'base.html.twig' %}
+{% extends 'security/login.html.twig' %}
 
-{% block title %}Reset your password{% endblock %}
 
-{% block body %}
+{% block title %}
+    {{ parent() }} | Reset Your Password
+{% endblock %}
+
+{% block titleContent %}
+    <header class="major">
+        <h2>{% apply resetPasswordTitle_content %}Reset Your Password{% endapply %}</h2>
+    </header>
+{% endblock %}
+
+{% block errorMSG %}
     {% for flash_error in app.flashes('reset_password_error') %}
-        <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
+        <p class="py-6 text-pink-600">
+        {{ flash_error }}
+        </p>
     {% endfor %}
-    <h1>Reset your password</h1>
+{% endblock %}
+
+{% block formGoods %}
 
     {{ form_start(requestForm) }}
-        {{ form_row(requestForm.email) }}
-        <div>
-            <small>
-                Enter your email address, and we will send you a
-                link to reset your password.
-            </small>
-        </div>
+    {{ form_widget(requestForm.email, {'attr':{'placeholder':'Email Address'}}) }}
+    <div>
+        <small>
+            Enter your email address, and we will send you a
+            link to reset your password.
+        </small>
+    </div>
 
-        <button class="btn btn-primary">Send password reset email</button>
+    <button class="btn btn-primary">Send password reset email</button>
     {{ form_end(requestForm) }}
 {% endblock %}
